tests/struct/bad/nested.catala_en
## Article

```catala
declaration enumeration E:
  -- Empty
  -- Rec content E

declaration scope A:
  output y content E

scope A:
  definition y equals E.Empty
```

```catala-test-inline
$ catala test-scope A
┌─[WARNING]─
│
│  The constructor "Rec" of enumeration "E" is never used;
│  maybe it's unnecessary?
│
├─➤ tests/struct/bad/nested.catala_en:6.6-6.9:
│   │
│ 6 │   -- Rec content E
│   │      ‾‾‾
└─ Article
┌─[ERROR]─
│
│  The type E is defined using itself, which is not supported
│  (Catala does not allow recursive types)
│
├─➤ tests/struct/bad/nested.catala_en:6.18-6.19:
│   │
│ 6 │   -- Rec content E
│   │                  ‾
└─ Article
#return code 123#
```
